# moltwrath

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  renovate.json
.github/: dependabot.yml
.github/workflows/: auto-approve.yml  ci.yml
dashboard/: index.html
examples/: multi_agent.py  simple_agent.py
moltwrath/: __init__.py  cli.py
moltwrath/api/: app.py
moltwrath/api/routes/: agents.py  tasks.py  ws.py
moltwrath/core/: __init__.py  agent.py  memory.py  tools.py  types.py
moltwrath/llm/: __init__.py  anthropic.py  openai.py  provider.py
moltwrath/orchestrator/: __init__.py  pipeline.py  router.py  swarm.py
moltwrath/plugins/: __init__.py  base.py
moltwrath/storage/: __init__.py  sqlite.py
moltwrath/utils/: __init__.py  config.py  logger.py
tests/: test_agent.py
